--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "appRedirect": {
-    "status": trur,
+    "status": true,
     "redirectURL": "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe"
   },
 
