--- a/config.json
+++ b/config.json
@@ -77,7 +77,7 @@
     "apps": [
       {
         "name": "Minecraft PE skyblock",
-        "packageName": "com.andiqwer.skyblock_maps",
+        "packageName": "com.adobe.air",
         "icon": "https://play-lh.googleusercontent.com/_KVgzJrTgMAgtOVMWUtOTbJjFv2H8BVAzIWX73mTkZglztux4F0yHO0OH_L7auFf3A=w240-h480",
         "download": "+100 K"
       },
